fixed Event Details from margin to padding so there is no break in the click toggle

--- a/src/components/EventDetails/EventDetails.module.css
+++ b/src/components/EventDetails/EventDetails.module.css
@@ -1,6 +1,6 @@
 
 .Eventdetails {
-    margin: 1rem 0 0;
+    padding: 1rem 0 0;
 }
 
 .Meta {
